@@ -1,4 +1,6 @@
 v1.5
+New methods:
+-- Added Koala::Utils.logger to enable debugging (thanks, KentonWhite!)
 Updated methods:
 -- GraphCollection.parse_page_url now uses the URI library and can parse any address (thanks, bnorton!)
 --
